# nomadcsoportok

./: CMakeLists.txt  README.md  almosmadarak.txt  csoportoszto.cpp
